Fixed some random alignment issues

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,5 +1,5 @@
 .navbar {
-    padding: 3rem;
+    padding: 1.8rem;
     background-color: transparent;
     .navbar-brand {
         display: flex;
@@ -57,10 +57,10 @@
         position: relative;
         .hamburger{
             position: absolute;
-            right: 3rem;
-            top: 3rem;
+            right: 1.8rem;
+            top: 1.8rem;
         }
-        padding: 3rem;
+        padding: 1.8rem;
     }
     .hamburger-element{
         font-size: 3rem;
