--- a/src/styles/hamburger-settings.scss
+++ b/src/styles/hamburger-settings.scss
@@ -1,6 +1,6 @@
 $hamburger-padding-x                       : 15px;
 $hamburger-padding-y                       : 15px;
-$hamburger-layer-width                     : 40px;
+$hamburger-layer-width                     : 30px;
 $hamburger-layer-height                    : 3px;
 $hamburger-layer-spacing                   : 6px;
 $hamburger-layer-color                     : $color-3;
